# worker-api

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: celery_app.py  main.py
app/adapters/: base.py  registry.py
app/adapters/ebay/: constants.py  fetcher.py  normalizer.py  parser.py  selectors.py  tasks.py
app/api/: deps.py
app/api/routes/: __init__.py  admin.py  health.py  jobs.py
app/core/: config.py  constants.py  exceptions.py  logging.py  retry.py
app/db/: session.py
app/db/migrations/: env.py
app/db/models/: __init__.py  job.py  normalized_record.py  raw_artifact.py  scrape_target.py  task_run.py
app/db/repositories/: jobs.py  normalized_records.py  raw_artifacts.py  task_runs.py
app/observability/: metrics.py  sentry.py  tracing.py
app/pipelines/: index_pipeline.py  ingest_pipeline.py  normalize_pipeline.py  persist_pipeline.py
app/schemas/api/: health.py  jobs.py
app/schemas/domain/: normalized_record.py  raw_record.py  scrape_request.py  scrape_result.py
app/schemas/events/: task_payloads.py
app/services/: artifact_service.py  dedupe_service.py  playwright_service.py  requests_service.py  storage_service.py
app/utils/: hashing.py  time.py  urls.py
app/workers/scheduling/: beat_schedule.py
app/workers/tasks/: cleanup_tasks.py  health_tasks.py  reprocess_tasks.py
deployment/: render.yaml
docker/: api.Dockerfile  worker.Dockerfile
tests/: conftest.py
tests/integration/api/: test_jobs_api.py
tests/integration/db/: test_job_persistence.py
tests/unit/core/: test_retry.py
(+7 files in other folders)
