[project]
name = "worker-api"
version = "0.1.0"
description = "TCG search ingestion worker: scrapes, parses, and normalizes trading card marketplace data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=6.4.0",
    "sentry-sdk>=2.57.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
